<resources>
    <string name="app_name">Adventour</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="already_have_account"><u>Already have an account? Log in here.</u></string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to the map view -->
    <string name="title_activity_map">Map</string>

    <!-- Strings related to the browse view -->
    <string name="title_browse_list">List</string>

    <!-- Strings in menu resource -->
    <string name="action_search">Search Tour</string>
    <string name="search_hint">San Diego</string>


    <!-- Strings related to the tour overview view -->
    <string name="text_content"> Overview </string>

    <!-- Navigation drawer strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_browse">BROWSE TOURS</string>
    <string name="navigation_drawer_my_tour">MY TOURS</string>
    <string name="navigation_drawer_log_out">LOG OUT</string>

    <string name="action_settings">Settings</string>

    <string name="end_tour"><b>End Tour</b></string>
    <string name="finish_tour"><b>Finish Tour</b></string>
    <string name="create_checkpt"><b>Create a Checkpoint</b></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_tour">Create Tour</string>

    <!-- String related to action bar-->
    <string name="action_bar_reset_loc">Reset Location</string>
    <string name="action_bar_list_to_map">List/Map</string>

</resources>
