<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search / will display always -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <!-- Map View -->
    <item android:id="@+id/action_map_view"
        android:icon="@drawable/ic_map_white"
        android:title="@string/action_bar_list_to_map"
        app:showAsAction="always" />

    <!-- Refresh -->
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_bar_reset_loc"
        android:showAsAction="ifRoom" />

    <!-- Help
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="Help"
        android:showAsAction="never"/> -->

</menu>