<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:theme="@style/textInputStyle">

                <EditText
                    android:id="@+id/email"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:padding="10dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:theme="@style/textInputStyle">

                <EditText
                    android:id="@+id/password"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:padding="10dp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_weight="0.58">

        <Button
            android:id="@+id/email_create_account_button"
            style="?android:textAppearanceLarge"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:text="@string/action_register"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceLarge"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold"
            android:backgroundTint="@color/colorTertiary"
            android:layout_gravity="right" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/whiteTrans"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp"/>

</LinearLayout>