<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs110.lit.adventour.CreateTourActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.github.clans.fab.FloatingActionMenu
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        fab:menu_colorNormal="@color/colorTertiary"
        fab:menu_colorPressed="@color/colorTertiaryDark"
        fab:menu_labels_textColor="#333333"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_colorNormal="#ffffff"
        fab:menu_labels_colorPressed="#f1f1f1"
        fab:menu_labels_colorRipple="#33000000"
        fab:menu_labels_textSize="16sp"
        fab:menu_labels_padding="6dp"
        fab:menu_backgroundColor="#66000000"
        fab:menu_fab_label="Options">

        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/end_tour"
            fab:fab_size="mini"
            fab:fab_colorNormal="#BB3333"
            fab:fab_colorPressed="#990000"
            android:src="@drawable/ic_exit_to_app_white"
            android:id="@+id/fab_touropts_end_tour"/>

        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/finish_tour"
            fab:fab_size="mini"
            fab:fab_colorNormal="#33BB33"
            fab:fab_colorPressed="#009900"
            android:src="@drawable/ic_done_white"
            android:id="@+id/fab_touropts_finish_tour"/>

        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/create_checkpt"
            fab:fab_size="mini"
            fab:fab_colorNormal="#3333BB"
            fab:fab_colorPressed="#000099"
            android:src="@drawable/ic_add_location_white"
            android:id="@+id/fab_touropts_create_checkpt"/>

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>